# ROS2_turtlesim_ws

./: README.md
install/: local_setup.sh  setup.sh
install/enc_turtle_cpp/include/enc_turtle_cpp/msg/: encrypted_data.h  encrypted_data.hpp  rosidl_generator_c__visibility_control.h  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
install/enc_turtle_cpp/lib/enc_turtle_cpp/: bgv_test  enc_turtle_controller  enc_turtle_plant  test_controller  test_plant  turtle_controller  turtle_plant
install/enc_turtle_cpp/lib/enc_turtle_cpp/install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
install/enc_turtle_cpp/lib/enc_turtle_cpp/log/: latest_build
install/enc_turtle_cpp/share/enc_turtle_cpp/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/enc_turtle_cpp/share/enc_turtle_cpp/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  enc_turtle_cppConfig-version.cmake  enc_turtle_cppConfig.cmake  enc_turtle_cpp__rosidl_generator_cExport-noconfig.cmake  enc_turtle_cpp__rosidl_generator_cppExport.cmake  enc_turtle_cpp__rosidl_typesupport_cExport-noconfig.cmake  enc_turtle_cpp__rosidl_typesupport_introspection_cExport.cmake  (+3 more)
install/turtle_demo_controller/lib/turtle_demo_controller/: enc_turtle_plant.py  leader_follower  turt_controller  turtle_controller.py  turtle_plant.py
install/turtle_demo_controller/share/turtle_demo_controller/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh
log/: latest_build
src/enc_turtle_cpp/: CMakeLists.txt
src/enc_turtle_cpp/config/: fastdds_config.xml
src/enc_turtle_cpp/launch/: enc_turtle.launch.py  enc_turtle_demo.launch.py  turtle_demo.launch.py
src/enc_turtle_cpp/msg/: EncryptedData.msg
src/enc_turtle_cpp/src/: bgv_test.cpp  enc_turtle_controller.cpp  enc_turtle_plant.cpp  test_controller.cpp  test_plant.cpp  turtle_controller.cpp  turtle_plant.cpp
src/turtle_demo_controller/: CMakeLists.txt  setup.py
src/turtle_demo_controller/install/: local_setup.sh  setup.ps1  setup.sh
src/turtle_demo_controller/install/turtle_demo_controller/include/turtle_demo_controller/msg/: encrypted_data.h  encrypted_data.hpp  rosidl_generator_c__visibility_control.h  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
src/turtle_demo_controller/install/turtle_demo_controller/include/turtle_demo_controller/msg/detail/: encrypted_data__builder.hpp  encrypted_data__functions.h  encrypted_data__rosidl_typesupport_fastrtps_c.h  encrypted_data__rosidl_typesupport_fastrtps_cpp.hpp  encrypted_data__rosidl_typesupport_introspection_c.h  encrypted_data__rosidl_typesupport_introspection_cpp.hpp  encrypted_data__struct.h  encrypted_data__struct.hpp  encrypted_data__traits.hpp  encrypted_data__type_support.h  encrypted_data__type_support.hpp
src/turtle_demo_controller/install/turtle_demo_controller/lib/turtle_demo_controller/: turtle_interface.py
src/turtle_demo_controller/install/turtle_demo_controller/share/ament_index/resource_index/package_run_dependencies/: turtle_demo_controller
src/turtle_demo_controller/install/turtle_demo_controller/share/ament_index/resource_index/parent_prefix_path/: turtle_demo_controller
src/turtle_demo_controller/install/turtle_demo_controller/share/ament_index/resource_index/rosidl_interfaces/: turtle_demo_controller
src/turtle_demo_controller/install/turtle_demo_controller/share/turtle_demo_controller/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
src/turtle_demo_controller/install/turtle_demo_controller/share/turtle_demo_controller/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake  turtle_demo_controllerConfig-version.cmake  turtle_demo_controllerConfig.cmake  turtle_demo_controller__rosidl_generator_cExport.cmake  turtle_demo_controller__rosidl_generator_cppExport.cmake  turtle_demo_controller__rosidl_typesupport_cExport.cmake  turtle_demo_controller__rosidl_typesupport_cppExport.cmake  turtle_demo_controller__rosidl_typesupport_introspection_cExport.cmake  turtle_demo_controller__rosidl_typesupport_introspection_cppExport.cmake
src/turtle_demo_controller/install/turtle_demo_controller/share/turtle_demo_controller/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
src/turtle_demo_controller/install/turtle_demo_controller/share/turtle_demo_controller/launch/: modular_two_turtle.launch.py  two_turtle.launch.py
src/turtle_demo_controller/install/turtle_demo_controller/share/turtle_demo_controller/msg/: EncryptedData.idl
src/turtle_demo_controller/launch/: enc_two_turtle.launch.py  two_turtle.launch.py
src/turtle_demo_controller/log/: latest_build
src/turtle_demo_controller/msg/: EncryptedData.msg
src/turtle_demo_controller/turtle_demo_controller/: enc_turtle_controller.py  enc_turtle_plant.py  simple_test.py  test_bgv.py  test_serialization.py  turtle_controller.py  turtle_plant.py
(+68 files in other folders)
